--- a/02-playbook.yaml
+++ b/02-playbook.yaml
@@ -1,14 +1,14 @@
 # Installing Nginx in node
 - name: install nginx
   hosts: node
-  #become: yes
+  become: yes
   tasks:
   - name: Installing nginx in node
     ansible.builtin.yum:
-    name: nginx
-    state: installed
+      name: nginx
+      state: installed
 
   - name: Running the service
     ansible.builtin.service:
-    name: nginx
-    state: started
+      name: nginx
+      state: started
