--- a/04-vars-files.yaml
+++ b/04-vars-files.yaml
@@ -1,6 +1,6 @@
 - name: variables from files
   hosts: localhost
-  vars_file:
+  vars_files:
   - variables.yaml
   tasks:
   - name: printing variables from file
