--- a/04-vars-files.yaml
+++ b/04-vars-files.yaml
@@ -4,5 +4,5 @@
   - variables.yaml
   tasks:
   - name: printing variables from file
-    ansbile.builtin.debug:
+    ansible.builtin.debug:
       msg: "This is the {{TYPE}}, Name of the Hospital is {{HOSPITAL_NAME}}, The motto of the hospital is {{MOTTO}}" 
