--- a/08-vars-args.yaml
+++ b/08-vars-args.yaml
@@ -3,4 +3,4 @@
   tasks:
   - name: print the vars from command line
     ansible.builtin.debug:
-      msg: "The name of the hospital is {{HOSPITAL}}"
+      msg: "The name of the variable is {{HOSPITAL}}"
