--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -9,3 +9,8 @@
   - name: print the command output
     ansible.builtin.debug:
       msg: "{{output.rc}}"
+
+  - name: Add the user roboshop
+    ansible.builtin.user:
+      name: roboshop
+    when: output.rc !=0
