--- a/11-conditions.yaml
+++ b/11-conditions.yaml
@@ -11,6 +11,7 @@
       msg: "{{output.rc}}"
 
   - name: Add the user roboshop
+    become: yes
     ansible.builtin.user:
       name: roboshop
     when: output.rc !=0
