--- a/13-assignment.yaml
+++ b/13-assignment.yaml
@@ -17,4 +17,4 @@
   - name: Check the user
     ansible.builtin.debug:
       msg: "User is:{{USER}}"
-    when: NAME==bhanu
+    when: NAME=="bhanu"
