--- a/13-assignment.yaml
+++ b/13-assignment.yaml
@@ -1,22 +1,21 @@
 - name: assigned the user in variable and dynamically check the user
   hosts: localhost
   vars:
-    USER: Divya
+    USER: bhanu
   tasks:
   - name: print the user if exists if not create
     ansible.builtin.command: id bhanu
     register: output
     ignore_errors: True
 
-  
+  - name: Check the user
+    ansible.builtin.debug:
+      msg: "User is:{{USER}}"
+    when: USER=="bhanu"
+    ignore_errors: True
 
   - name: create the user
     become: yes
     ansible.builtin.user:
-      name: Divya
-  - name: Check the user
-    ansible.builtin.debug:
-      msg: "User is:{{USER}}
-    failed_when:
-    - USER=="Divya"
-    - output.rc != 0
+      name: bhanu
+    when: output.rc !=0
