--- a/13-assignment.yaml
+++ b/13-assignment.yaml
@@ -1,7 +1,7 @@
 - name: assigned the user in variable and dynamically check the user
   hosts: localhost
   vars:
-    USER: bhanu
+    USER: divya
   tasks:
   - name: print the user if exists if not create
     ansible.builtin.command: id bhanu
@@ -11,11 +11,11 @@
   - name: Check the user
     ansible.builtin.debug:
       msg: "User is:{{USER}}"
-    when: USER=="bhanu"
+    when: USER=="divya"
     ignore_errors: True
 
   - name: create the user
     become: yes
     ansible.builtin.user:
-      name: bhanu
+      name: divya
     when: output.rc !=0
