--- a/13-assignment.yaml
+++ b/13-assignment.yaml
@@ -23,5 +23,5 @@
   - name: Print the user
     ansible.builtin.command: id Jyothi
     register: result
-      msg: "the id of {{USER}} is {{result}}"
+      msg: "the user is {{result}}"
     
