--- a/13-loops.yaml
+++ b/13-loops.yaml
@@ -3,7 +3,7 @@
   tasks:
   - name: print the name from the loop
     ansible.builtin.debug:
-      msg: "Hello"
+      msg: "Hello {{item}}"
     loop:
     - Bhanu
     - Divya
